# ciphersubmitsrv

./: .gitignore  Cargo.toml
docs/: http-api-contract.md  prd.md
frontend/: .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: StatCard.vue
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/services/: admin.ts  http.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: base.css
frontend/src/types/: admin.ts
frontend/src/views/: ActivityView.vue  DashboardView.vue  LoginView.vue  MaintenanceView.vue  TeacherKeysView.vue
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  services.rs  storage.rs
tests/: api_flow.rs
